sonarr/sonarr-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - protocol: TCP
    port: 8989
