sonarr/sonarr-ingres.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sonarr.wastedbits.org
    http:
      paths:
      - backend:
          serviceName: sonarr
          servicePort: 8989
