sonarr/sonarr-traefik-ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.wastedbits.org`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989 
  tls:
    certResolver: gandi
    domains:
      - main: "wastedbits.org"
        sans:
          - "*.wastedbits.org"
